# Automation

./: README.md
sit-bdd/: .flake8  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  build.sh  one_click_setup.py  parts.json  pyproject.toml  run_bdd.py
sit-bdd/sitbdd/: config.py  environment.py
sit-bdd/sitbdd/data/: cards.json  config.json
sit-bdd/sitbdd/features/: BasicTest.feature  ClassicPrepay.feature  Cobranded.feature  Cobranded_PAP.feature  CouponsAndDiscounts.feature  EOS_and_EOD.feature  ExportExamples.feature  FuelTank.feature  KPS.feature  LoyaltyBatchClose.feature  MobilePay.feature  Money_Order.feature  OrderBridge.feature  POS_ICR_utilities.feature  PayOut.feature  Postpay.feature  RLM.feature  RegistryExamples.feature  RestInGas.feature  SendTransactionToTDM-Analytics.feature  SmartPrepay.feature  Transaction_number.feature
sit-bdd/sitbdd/features/Conexxus_Mobile/: Conexxus_Mobile.feature  Conexxus_Mobile_prepay_grade_selection.feature  Conexxus_Mobile_prepay_no_grade_selection.feature
sit-bdd/sitbdd/features/Fuel/: PAPPromptFlow.feature  TwoTierSystem.feature
sit-bdd/sitbdd/features/ULP/: ULP_Condiment_Discounts.feature
sit-bdd/sitbdd/steps/: __init__.py  conexxus_mobile.py  eps_and_loyalty_common.py  export.py  fuel_common.py  fuel_config.py  kps_common.py  mobile_pay.py  pinpad_common.py  pos_common.py  postpay.py  prepay.py  pumps.py  rcm_common.py  registry.py  svc.py  system_common.py
sit-bdd/tests/sitcore/: test_card_deck.py  test_foreign.py  test_http_communicator.py  test_logging_utils.py  test_utility.py
(+172 files in other folders)
